Further improvements to api v2 endpoints, fixing bugs and refining the approach
